<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loading"
            type="boolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background">

            <TextView
                android:id="@+id/tvLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/login_title"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/backgroundWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_goneMarginTop="50dp" />


            <android.support.constraint.ConstraintLayout
                android:id="@+id/backgroundWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/background_create_user_input"
                android:elevation="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabel"
                app:layout_constraintWidth_max="400dp">

                <EditText
                    android:id="@+id/etLoginEmail"
                    style="@style/EditTextCreateUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="60dp"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawableStart="@drawable/ic_email"
                    android:enabled="@{!loading}"
                    android:hint="@string/login_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="@+id/backgroundWhite"
                    app:layout_constraintStart_toStartOf="@+id/backgroundWhite"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etLoginPassword"
                    style="@style/EditTextCreateUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawableStart="@drawable/ic_password"
                    android:enabled="@{!loading}"
                    android:hint="@string/login_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="@+id/backgroundWhite"
                    app:layout_constraintStart_toStartOf="@+id/backgroundWhite"
                    app:layout_constraintTop_toBottomOf="@+id/etLoginEmail" />

                <Button
                    android:id="@+id/btLoginSubmit"
                    android:layout_width="200dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/background_button_orange"
                    android:enabled="@{!loading}"
                    android:text="@string/login_submit"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/backgroundWhite"
                    app:layout_constraintStart_toStartOf="@+id/backgroundWhite"
                    app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />
            </android.support.constraint.ConstraintLayout>


            <ImageView
                android:id="@+id/ivUserAvatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/background_create_user_avatar"
                android:elevation="1dp"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toTopOf="@+id/backgroundWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/backgroundWhite"
                app:srcCompat="@drawable/ic_auth" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>